--- a/css/main.less
+++ b/css/main.less
@@ -230,6 +230,19 @@ body{
 	  background-color:#ffffff ;
 	  padding: 20px;
 	}
+    .sprite-img{
+      float: right;
+      width: 50%;
+      height: 300px;
+      padding-left: 20px;
+      .title-hyosung{
+        background: #000 url("../module/web/hysung/010000.png") no-repeat center;
+        background-size: 100% auto;
+        width: 100%;
+        height: 100%;
+      }
+
+    }
   }
   .detail a{
 	display: inline-block;
@@ -269,9 +282,15 @@ ul.none li{
 }
 
 .title-monitoring{
-  margin: 20px;
   background: url("../module/web/monitoring/title.jpg") no-repeat center;
-  background-size: 100% auto;
+  background-size: 90% auto;
+  width: 100%;
+  height: 100%;
+
+}
+.title-meteo{
+  background: url("../module/web/borispol/borispol1.jpg") no-repeat center;
+  background-size: 90% auto;
   width: 100%;
   height: 100%;
 }
