--- a/partial/block.html
+++ b/partial/block.html
@@ -29,8 +29,8 @@
 						</div>
 					</div>
 
-					<div style="clear: both;" class="view-container" >
-						<div ng-view  view-container ="lang" class="view-frame">
+					<div style="clear: both;"  class="view-container" kkk>
+						<div ng-view  class="view-frame">
 							<!--{{nav.home}}-->
 						</div>
 					</div>
