--- a/css/main.less
+++ b/css/main.less
@@ -309,3 +309,13 @@ ul.none li{
     }
   }
 }
+#thumbs{
+  margin: 0;
+  li{
+    display: inline-block;
+    text-indent: 0;
+    img{
+      width: 63px;
+    }
+  }
+}
