--- a/css/main.less
+++ b/css/main.less
@@ -296,7 +296,6 @@ ul.none li{
 }
 
 .sprite-orbit{
-
   &>div{
     overflow: hidden;
     width: 800px;
@@ -320,5 +319,17 @@ ul.none li{
     img{
       width: 63px;
     }
+  }
+}
+.navigation{
+  text-indent: 0;
+  text-align: center;
+  background: #D7E7F5;
+  display: table;
+  .section{
+    padding: 5px 10px;
+    display: table-cell;
+    border-left: 1px solid gray;
+    cursor: pointer;
   }
 }
