--- a/css/main.less
+++ b/css/main.less
@@ -333,3 +333,26 @@ ul.none li{
     cursor: pointer;
   }
 }
+.scroll-nav{
+  background: gray;
+  background: -moz-linear-gradient(top,  rgba(125,185,232,0.03) 0%, rgba(169,207,211,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,185,232,0.03)), color-stop(100%,rgba(169,207,211,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(125,185,232,0.03) 0%,rgba(169,207,211,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(125,185,232,0.03) 0%,rgba(169,207,211,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(125,185,232,0.03) 0%,rgba(169,207,211,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(125,185,232,0.03) 0%,rgba(169,207,211,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#087db9e8', endColorstr='#a9cfd3',GradientType=0 ); /* IE6-9 */
+
+  padding: 4px;
+li{
+  display: inline-block;
+  a{
+    text-decoration: none;
+    color: #000000;
+    padding: 5px;
+    &:hover{
+      background-color: #ffffff;
+    }
+  }
+}
+}
