--- a/css/main.less
+++ b/css/main.less
@@ -74,6 +74,40 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#66ffffff',GradientType=1 ); /* IE6-9 */
 
 }
+.button(){
+  padding: 5px 10px;
+
+}
+
+
+.button{
+  .button;
+   text-decoration: none;
+   &.gray{
+    background: rgb(234,234,234); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(234,234,234,1) 0%, rgba(219,219,219,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(234,234,234,1)), color-stop(100%,rgba(219,219,219,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(234,234,234,1) 0%,rgba(219,219,219,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(234,234,234,1) 0%,rgba(219,219,219,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(234,234,234,1) 0%,rgba(219,219,219,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(234,234,234,1) 0%,rgba(219,219,219,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaeaea', endColorstr='#dbdbdb',GradientType=0 ); /* IE6-9 */
+
+
+    border-top: 1px solid #FFF;
+    border-left: 1px solid #FFF;
+    box-shadow: 0px 1px 2px #959595;
+    text-shadow: -1px 1px 2px #FFF;
+    color: #4A4A4A;
+
+    line-height: 1;
+     &:active{
+       background: #d4d4d4;
+       color: #ffffff;
+     }
+  }
+
+}
 
 
 
@@ -366,6 +400,11 @@ li{
   }
 }
 }
+
+
+
+
+
 @media print {
   .contact-to-print{
     display: block;
