--- a/css/main.less
+++ b/css/main.less
@@ -296,7 +296,8 @@ body{
       height: 300px;
       padding-left: 20px;
       .title-hyosung{
-        background: #000 url("../module/web/hyosung/010000.png") no-repeat center;
+       // background: #000 url("../module/web/hyosung/010000.png") no-repeat center;
+        background: #000;
         background-size: 100% auto;
         width: 100%;
         height: 100%;
@@ -432,6 +433,9 @@ li{
 
 
 @media print {
+  .title-monitoring{
+    display: block;
+  }
   .contact-to-print{
     display: block;
   }
