--- a/partial/block.html
+++ b/partial/block.html
@@ -29,10 +29,11 @@
 
 			<div ng-controller="nav">
 				<div class="head no-print" directive-name="lang">
-
-
-
                    <div class="action">
+                       <div>
+                           Release
+                       </div>
+
                        <div class="download">
                            <a class=" no-print" href="{{olo}}" download="CV_Lipatov">{{download}} </a>
                        </div>
@@ -40,20 +41,13 @@
                            <option value="ru">Ru</option>
                            <option value="en">En</option>
                        </select>
-
                    </div>
-
-
-
-
 				</div>
 				<div class="book" style=" border-top: 1px solid transparent">
-
 					<div class="nav-panel no-print" style="margin-top: 10px" >
-						<div  >
+						<div >
 							<a class="{{cl[$index]}}"  ng-init="initEl(this)" ng-repeat="nav in navs" href="{{nav.href}}">
                                 {{nav.t}}
-
                             </a>
 						</div>
 					</div>
