--- a/partial/block.html
+++ b/partial/block.html
@@ -30,10 +30,9 @@
 			<div ng-controller="nav">
 				<div class="head no-print" directive-name="lang">
                    <div class="action">
-                       <div>
-                           Release
+                       <div class="inline-block">
+                           {{langPpd.release}} {{langPpd.releaseDate}}
                        </div>
-
                        <div class="download">
                            <a class=" no-print" href="{{olo}}" download="CV_Lipatov">{{download}} </a>
                        </div>
