--- a/css/main.less
+++ b/css/main.less
@@ -162,7 +162,7 @@ body{
     padding: 5px;
     .download{
       display: inline-block;
-      margin-right: 5px;
+      margin: 0 5px;
       border: 1px solid #ffffff;
       padding: 1px 5px;
       border-radius: 3px;
