--- a/partial/skillGraph.html
+++ b/partial/skillGraph.html
@@ -1,3 +1,7 @@
 <div>
-    График
+  <ul>
+      <li ng-repeat="skill in skills">
+            {{skill.text}} : {{skill.start}} {{skill.end}}
+      </li>
+  </ul>
 </div>
