--- a/css/main.less
+++ b/css/main.less
@@ -461,8 +461,11 @@ li{
   height: 0;
   transition: 0.1s linear;
   &.show{
-    height: 280px;
+    height: 400px;
   }
+}
+.post__article .block-graph-skill{
+  display: none;
 }
 .block-skill{
   position: relative;
@@ -531,4 +534,11 @@ li{
     color: gray;
     background: #ffffff;
   }
+}
+.timeline{
+  background: url("../img/timeline.png") no-repeat center;
+  background-size: 100%;
+  display: inline-block;
+  padding: 5px;
+
 }
