--- a/css/main.less
+++ b/css/main.less
@@ -463,7 +463,7 @@ li{
   transition: 0.2s linear;
   &.show{
     opacity: 1;
-    height: 400px;
+    height: 500px;
   }
 }
 .post__article .block-graph-skill{
@@ -504,17 +504,18 @@ li{
     margin-top: -5px;
   }
   .green{
-    background: #f79e9e; /* Old browsers */
-    background: -moz-linear-gradient(left,  #f79e9e 0%, #62e200 46%, #62e200 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#f79e9e), color-stop(46%,#62e200), color-stop(100%,#62e200)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left,  #f79e9e 0%,#62e200 46%,#62e200 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left,  #f79e9e 0%,#62e200 46%,#62e200 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left,  #f79e9e 0%,#62e200 46%,#62e200 100%); /* IE10+ */
-    background: linear-gradient(to right,  #f79e9e 0%,#62e200 46%,#62e200 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f79e9e', endColorstr='#62e200',GradientType=1 ); /* IE6-9 */
+    background: rgb(150,165,170); /* Old browsers */
+    background: -moz-linear-gradient(left,  rgba(150,165,170,1) 0%, rgba(181,198,208,1) 21%, rgba(216,225,231,1) 70%, rgba(216,225,231,1) 70%, rgba(192,215,229,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(150,165,170,1)), color-stop(21%,rgba(181,198,208,1)), color-stop(70%,rgba(216,225,231,1)), color-stop(70%,rgba(216,225,231,1)), color-stop(100%,rgba(192,215,229,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgba(150,165,170,1) 0%,rgba(181,198,208,1) 21%,rgba(216,225,231,1) 70%,rgba(216,225,231,1) 70%,rgba(192,215,229,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgba(150,165,170,1) 0%,rgba(181,198,208,1) 21%,rgba(216,225,231,1) 70%,rgba(216,225,231,1) 70%,rgba(192,215,229,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgba(150,165,170,1) 0%,rgba(181,198,208,1) 21%,rgba(216,225,231,1) 70%,rgba(216,225,231,1) 70%,rgba(192,215,229,1) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgba(150,165,170,1) 0%,rgba(181,198,208,1) 21%,rgba(216,225,231,1) 70%,rgba(216,225,231,1) 70%,rgba(192,215,229,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96a5aa', endColorstr='#c0d7e5',GradientType=1 ); /* IE6-9 */
+
 
     &:hover{
-      background: #2cff24;
+      background: #B5C6D0;
     }
   }
   .yellow{
