--- a/css/main.less
+++ b/css/main.less
@@ -463,7 +463,7 @@ li{
   transition: 0.2s linear;
   &.show{
     opacity: 1;
-    height: 550px;
+    height: 600px;
   }
 }
 .post__article .block-graph-skill{
@@ -562,4 +562,10 @@ li{
 #map{
   height: 400px;
   background: #cdcdcd;
+}
+.skills-textt-container-row{
+
+  .text{
+    width: 50%;
+  }
 }
