Add android encon ok

--- a/css/main.less
+++ b/css/main.less
@@ -266,15 +266,14 @@ body{
 	}
   }
   .item-block{
-
 	padding: 0 5px 5px 5px;
 	text-align: justify;
 	margin-bottom: -1px;
-
 	&>div{
 	  box-shadow: 0 2px 3px rgba(0,0,0,0.4);
 	  background-color:#ffffff ;
 	  padding: 20px;
+      min-height: 300px;
 	}
     .sprite-img{
       float: right;
