--- a/module/web/web_en.pug
+++ b/module/web/web_en.pug
@@ -1,10 +1,56 @@
 .container-item
     .detail(style='text-align: right')
         div(style='padding: 5px 5px 0 5px; overflow: hidden')
-            a(href='#web/loyverse', style='') View detail
+            a(href='#web/bike-atlas', style='') View detail
+    .item-block
+        div(style="height: 260px")
+            div(style='float: right; width: 50%; height: 100%')
+                .title-encon
+                    img(src='module/web/bike-atlas/bike-atlas.png', style='width: 90%; background: #000000')
+            div(style='margin-right: 50%')
+                p
+                    a(href='http://maxislav.github.io/bike-atlas/', target='_blank', title='Navigate to ') Bike-Atlas
+                p
+                    | Description.
+                p
+                    | Monitoring system for cyclists. Social tracking system in real time.
+                    | Displays all friends on the map. You can plan meetings, meet during the trip. Helps analyze distance and speed after recording you trip.
+                p
+                    | Go to the page  &nbsp;
+                    a(href='http://maxislav.github.io/bike-atlas/', target='_blank', title='Go to the page ')
+                        | http://maxislav.github.io/bike-atlas/
+                p Github: &nbsp;
+                    a(href="https://github.com/Maxislav/bike-atlas") https://github.com/Maxislav/bike-atlas
+.container-item
+    .detail(style='text-align: right')
+        div(style='padding: 5px 5px 0 5px; overflow: hidden')
+            a(href='#web/borispol', style='') View detail
     .item-block
         div
             div(style='float: right; width: 50%; height: 300px')
+                div
+                    img(src='module/web/borispol/meteo-radar.png', style='width: 90%; bacground: black')
+            div(style='margin-right: 50%; min-height: 300px')
+                p
+                    a(href='http://meteo-radar.info', target='_blank', title='Перейти на страницу..') Метео
+                p
+                    | Selection of operational information about the weather. A typical example of a modular design using requireJs.
+                |                 This page is created to assess the weather. Is a helper on the road.  In a few hours you can appreciate approximation rain.
+                p
+                p
+                    | Go to the page  &nbsp;
+                    a(href='http://meteo-radar.info', target='_blank', title='Go to the page ')
+                        | http://meteo-radar.info
+                p Github: &nbsp;
+                    a(href="https://github.com/Maxislav/borispol-radar2") https://github.com/Maxislav/borispol-radar2
+
+.container-item
+    .detail(style='text-align: right')
+        div(style='padding: 5px 5px 0 5px; overflow: hidden')
+            a(href='#web/loyverse', style='') View detail
+    .item-block
+        div
+            div(style='float: right; width: 50%; height: 250px')
                 .title-encon
                     img(src='module/web/loyverse/01.jpg', style='width: 90%; background: #000000')
             div(style='margin-right: 50%')
@@ -91,26 +137,7 @@
                     a(href='http://motohelp-ua.org/atlas', target='_blank', title=' Go to the page..')
                         | http://motohelp-ua.org/atlas
                 p Demo entrance  -> login: demo | Pass: demo
-.container-item
-    .detail(style='text-align: right')
-        div(style='padding: 5px 5px 0 5px; overflow: hidden')
-            a(href='#web/borispol', style='') View detail
-    .item-block
-        div
-            div(style='float: right; width: 50%; height: 300px')
-                div
-                    img(src='module/web/borispol/borispol1.jpg', style='width: 90%; bacground: black')
-            div(style='margin-right: 50%; min-height: 300px')
-                p
-                    a(href='http://borispol.hol.es', target='_blank', title='Перейти на страницу..') Метео
-                p
-                    | Selection of operational information about the weather. A typical example of a modular design using requireJs.
-                |                 This page is created to assess the weather. Is a helper on the road.  In a few hours you can appreciate approximation rain.
-                p
-                p
-                    | Go to the page
-                    a(href='http://borispol.hol.es', target='_blank', title='Go to the page ')
-                        | http://borispol.hol.es
+
 .container-item
     .detail(style='text-align: right')
         div(style='padding: 5px 5px 0 5px; overflow: hidden')
